--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,10 +1,25 @@
 <resources>
-    <string name="app_name">LoanApp</string>
-    <string name="login_welcome">Log In</string>
+    <string name="app_name">LendMe</string>
+    <string name="title_home">Home</string>
+    <string name="title_dashboard">Dashboard</string>
+    <string name="title_notifications">Notifications</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 
     <string name="back4app_server_url">https://parseapi.back4app.com/</string>
 
     <!-- Paste BOTH strings as required -->
     <string name="back4app_app_id">vtvvgF72pHl0DgjRE3AFOa4ZyMzOZsE1XqLO1gUP</string>
     <string name="back4app_client_key">zMFhTVeH9cEs7R2bhIqm6n0SMeoC3GorUncZNwv3</string>
+    <string name="title_activity_login">LoginActivity</string>
+    <!-- Strings used for fragments for navigation -->
+    <string name="first_fragment_label">First Fragment</string>
+    <string name="second_fragment_label">Second Fragment</string>
+    <string name="next">Next</string>
+    <string name="previous">Previous</string>
+
+    <string name="hello_first_fragment">Hello first fragment</string>
+    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
+    <string name="login_welcome">Log In</string>
+    <string name="map_key">###</string>
 </resources>
